fix mobile menu z-index

--- a/css/query.css
+++ b/css/query.css
@@ -124,7 +124,7 @@
     /* MOBILE NAVIGATION */
     .btn-mobile-nav {
       display: block;
-      z-index: 9999;
+      z-index: 100001;
     }
   
     .main-nav {
@@ -162,6 +162,7 @@
       pointer-events: auto;
       visibility: visible;
       transform: translateX(0);
+      z-index: 100000;
     }
   
     .nav-open .icon-mobile-nav[name="close-outline"] {
